# MemoChater

./: .gitignore  README.md  start-backend.bat  start-webui.bat
memo-chater/: .env.example  Cargo.toml  config.toml
memo-chater/data/assistants/ast_19b74663c7f_9904/: config.toml
memo-chater/data/assistants/ast_19b8528f4ef_8196/: config.toml
memo-chater/data/files/ast_19b74663c7f_9904/files/: index.json
memo-chater/prompts/: memory_extractor.txt  memory_processor.txt  system.txt
memo-chater/src/: admin.html  admin_api.rs  api.rs  assistant_api.rs  config.rs  graph_api.rs  lib.rs  main.rs  qdrant.rs  state.rs
memo-chater/src/ai/: client.rs  mod.rs
memo-chater/src/assistant/: manager.rs  mod.rs  storage.rs  types.rs
memo-chater/src/extractor/: memory_extractor.rs  mod.rs  types.rs
memo-chater/src/graph/: dimension_graph.rs  error.rs  locator.rs  mod.rs  processor.rs  query.rs  types.rs
memo-chater/src/graph/dimensions/: mod.rs  temporal.rs
memo-chater/src/memory/: long_term_store.rs  manager.rs  mod.rs  pending_store.rs
memo-chater/src/pipeline/: config.rs  context.rs  dispatcher.rs  mod.rs  packet.rs  processor.rs  storage.rs
memo-chater/src/pipeline/processors/: PROCESSOR_DEV_GUIDE.md  mod.rs
memo-chater/src/pipeline/processors/content_chunker/: config.toml  mod.rs
memo-chater/src/pipeline/processors/context_cleaner/: mod.rs
memo-chater/src/storage/: file_store.rs  mod.rs
memo-chater/src/types/: context.rs  memory.rs  message.rs  mod.rs
memo-chater/src/vector/: mod.rs  store.rs  types.rs
webui/: README.md  index.html  package-lock.json  (+3 more)
(+72 files in other folders)
