[package]
name = "memo-chater"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 服务
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 异步流
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"

# 工具
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
thiserror = "2"

# 正则表达式
regex = "1"
once_cell = "1"

# 配置
dotenvy = "0.15"

# 随机数
rand = "0.8"

# 向量数据库 - 使用 HTTP API，无需额外依赖